--- a/app/scss/components/_main.scss
+++ b/app/scss/components/_main.scss
@@ -38,18 +38,6 @@ div.card-divider.secondary {
   color: $white;
 }
 
-a.button.icon-button, a.button.icon-button-left {
-  i {
-    margin-right: 8px;
-  }
-}
-
-a.button.icon-button-right {
-  i {
-    margin-left: 8px;
-  }
-}
-
 div.card {
   position: relative;
 
